--- a/src/media/scss/comps/VisitBar.scss
+++ b/src/media/scss/comps/VisitBar.scss
@@ -1,4 +1,4 @@
-@use "sass:math";
+@use 'sass:math';
 
 .visit-bar {
     $height: 50px;
@@ -12,6 +12,7 @@
     width: 450px;
     max-width: 80%;
     border-radius: math.div($height, 2);
+
     background: linear-gradient(180deg, #FFF 0%, #EEE 100%);
     box-shadow: 10px 10px 10px rgba(0,0,0,0.1);
 
@@ -20,8 +21,8 @@
     &:after {
         content: ' ';
         position: absolute;
-        top: math.div($height - $g_size, 2);
-        right: math.div($height - $g_size, 2);
+        top: math.div(($height - $g_size), 2);
+        right: math.div(($height - $g_size), 2);
         width: $g_size;
         height: $g_size;
         background-image: url("https://upload.wikimedia.org/wikipedia/commons/5/53/Google_%22G%22_Logo.svg");
@@ -30,14 +31,17 @@
         background-position: center;
     }
 
+    $size: $g_size + $g_size + $height;
+    $halfHeight: math.div($height, 2);
+
     input {
         width: calc(100% - #{$height + $g_size});
         height: 100%;
-        padding: 0 math.div($g_size + $g_size + $height, 2) 0 math.div($height, 2);
+        padding: 0 math.div($size, 2) 0 $halfHeight;
         line-height: $height;
         font-size: 18px;
         border: none;
-        border-radius: math.div($height, 2);
+        border-radius: $halfHeight;
         font-family: 'Kanit', sans-serif;
 
         &:focus {
