--- a/src/media/scss/App.scss
+++ b/src/media/scss/App.scss
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;900&display=swap');
 
+@import './comps/Clock.scss';
+
 body {
     margin: 0;
     padding: 0;
