--- a/src/media/scss/comps/Clock.scss
+++ b/src/media/scss/comps/Clock.scss
@@ -2,6 +2,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    min-width: 630px;
     transform: translate(-50%, -50%);
 
     $clock_fontSize: 120px;
